# ComfyUI-MagnifyGlass

./: README.md  __init__.py  pyproject.toml
web/: magnify_glass.js
